# eBNN-microROS

./: .gitignore  README.md  platformio.ini
include/: ebnn.h  simple_mnist.h
src/client/: main.cpp
src/host/agent/: run_agent.sh
src/host/monitor/: Dockerfile  requirements.txt  run_monitor.sh
src/host/monitor/ebnn_monitor/: package.xml  setup.cfg  setup.py
src/host/monitor/ebnn_monitor/ebnn_monitor/: anomaly_detector.py  ebnn_monitor.py
src/host/monitor/tools/: train_pca.py
src/host/publisher/: Dockerfile  run_publisher.sh
src/host/publisher/mnist_publisher/: package.xml  setup.cfg  setup.py
src/host/publisher/mnist_publisher/mnist_publisher/: mnist_publisher.py
src/host/subscriber/: Dockerfile  run_subscriber.sh
src/host/subscriber/mnist_subscriber/: package.xml  setup.cfg  setup.py
src/host/subscriber/mnist_subscriber/mnist_subscriber/: mnist_subscriber.py
