<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ebnn_monitor</name>
  <version>0.0.1</version>
  <description>MNIST subscriber node for fetching results from micro-ROS eBNN devices and monitoring anomalies.</description>
  <maintainer email="steven950811@gmail.com">Steven</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-tensorflow</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>